--- a/draft/Project_Draft.tex
+++ b/draft/Project_Draft.tex
@@ -216,11 +216,11 @@ discussed below -
 \end{itemize}
   
 
-\begin{figure}[h]
-    \includegraphics[width=8cm]{../doc/images/FLANNEL-IMPROVED.png}
+\begin{figure*}[h]
+    \includegraphics[width=\textwidth]{../doc/images/FLANNEL-IMPROVED.png}
     \caption{FLANNEL Improvement}
     \label{fig:improve}
-\end{figure}
+\end{figure*}
 
 
 
@@ -422,11 +422,11 @@ metrics as seen in the base flannel paper.
     \label{fig:cfmatrix}
 \end{figure}
 
-\begin{figure}[h]
-    \includegraphics[width=8cm]{../doc/images/segmentation_training.png}
+\begin{figure*}[h]
+    \includegraphics[width=\textwidth]{../doc/images/segmentation_training.png}
     \caption{Segmentation Training}
     \label{fig:segtrain}
-\end{figure}
+\end{figure*}
 
 
 \newpage
