--- a/draft/Project_Draft.tex
+++ b/draft/Project_Draft.tex
@@ -381,8 +381,8 @@ a NVIDIA 1080 GPU.
 
 FLANNEL with patch-based classification are implemented in PyTorch and are
 trained on 4 different Amazon Web Services Elastic Compute Cloud virtual
-machines each featuring a single NVIDIA Tesla V100 GPU. The base models ()TODO:
-mention base models) are fine tuned using pre-trained models. The data are
+machines each featuring a single NVIDIA Tesla V100 GPU. The base models
+are fine tuned using pre-trained models. The data are
 augmented with random flips, crops and scaling during the fine tuning process.
 
 After the base models are trained, FLANNEL is trained by passing in the
